@@ -5037,28 +5037,40 @@ Binary.prototype.res = function(res, options, notmodified) {
 		filename = framework_utils.join(self.directory, id + self.ext);
 
 	var stream = Fs.createReadStream(filename, BINARYREADMETA);
+
 	stream.on('error', () => res.throw404());
 	stream.on('data', function(buffer) {
 		var json = buffer.toString('utf8').replace(REGCLEAN, '');
 		if (json) {
 			var obj = JSON.parse(json, jsonparser);
 			var utc = obj.date ? new Date(+obj.date.substring(0, 4), +obj.date.substring(4, 6), +obj.date.substring(6, 8)).toUTCString() : '';
+
 			if (!options.download && res.req.headers['if-modified-since'] === utc) {
 				res.extention = U.getExtension(obj.name);
 				notmodified(res, utc);
 			} else {
+
 				res.options.type = obj.type;
 				res.options.stream = Fs.createReadStream(filename, BINARYREADDATA);
+
 				if (!options.download) {
 					if (!options.headers)
 						options.headers = {};
 					options.headers['Last-Modified'] = utc;
 				} else
 					res.options.download = options.download;
+
 				res.options.headers = options.headers;
 				res.options.done = options.done;
-				res.options.compress = options.nocompress ? false : true;
-				res.$stream();
+
+				if (options.image) {
+					res.options.make = options.make;
+					res.options.cache = options.cache !== false;
+					res.$image();
+				} else {
+					res.options.compress = options.nocompress ? false : true;
+					res.$stream();
+				}
 			}
 		} else
 			res.throw404();
